fix feature overflow issue

--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -62,6 +62,7 @@
     padding: 30px;
     // overflow: auto;
     background-color: fade(@color__feature-content--background, 60%);
+    overflow: hidden;
 
     @media @bp-global-medium {
         height: 800px;
